"Se integro logica para funcionaldaid de scraping"
